--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
   },
   "dependencies": {
     "react-slick": "^0.23.2",
-    "react-youtube": "^7.9.0"
+    "react-youtube": "^7.9.0",
+    "slick-carousel": "^1.8.1"
   }
 }
