--- a/package.json
+++ b/package.json
@@ -33,33 +33,34 @@
   },
   "main": "n/a",
   "devDependencies": {
-    "@babel/cli": "^7.2.3",
-    "@babel/plugin-proposal-class-properties": "^7.3.4",
-    "@babel/plugin-proposal-object-rest-spread": "^7.3.4",
+    "@babel/cli": "^7.6.0",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/plugin-proposal-object-rest-spread": "^7.5.5",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@babel/plugin-transform-runtime": "^7.3.4",
-    "@babel/preset-env": "^7.3.4",
+    "@babel/plugin-transform-runtime": "^7.6.0",
+    "@babel/preset-env": "^7.6.0",
     "@babel/preset-react": "^7.0.0",
-    "axios": "^0.18.0",
+    "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
-    "eslint-config-react-app": "^3.0.8",
-    "gatsby": "^2.1.33",
-    "gatsby-image": "^2.0.33",
-    "gatsby-plugin-manifest": "^2.0.24",
-    "gatsby-plugin-react-helmet": "^3.0.9",
-    "gatsby-plugin-sass": "^2.0.11",
-    "gatsby-plugin-sharp": "^2.0.28",
-    "gatsby-source-filesystem": "^2.0.25",
-    "gatsby-transformer-sharp": "^2.1.17",
-    "node-sass": "^4.11.0",
-    "prettier": "^1.16.4",
-    "react": "^16.8.4",
-    "react-dom": "^16.8.4",
-    "react-helmet": "^5.2.0",
-    "react-icons": "^3.5.0"
+    "eslint-config-react-app": "^5.0.2",
+    "gatsby": "^2.15.18",
+    "gatsby-image": "^2.2.19",
+    "gatsby-plugin-manifest": "^2.2.17",
+    "gatsby-plugin-react-helmet": "^3.1.7",
+    "gatsby-plugin-sass": "^2.1.14",
+    "gatsby-plugin-sharp": "^2.2.24",
+    "gatsby-source-filesystem": "^2.1.24",
+    "gatsby-transformer-sharp": "^2.2.15",
+    "node-sass": "^4.12.0",
+    "prettier": "^1.18.2",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
+    "react-helmet": "^5.2.1",
+    "react-icons": "^3.7.0"
   },
   "dependencies": {
-    "react-slick": "^0.23.2",
+    "react-dev-utils": "^9.0.4",
+    "react-slick": "^0.25.2",
     "react-youtube": "^7.9.0",
     "slick-carousel": "^1.8.1"
   }
